[tool.poetry]
name = "content-calendar-template"
version = "0.1.0"
description = "A Python tool to generate Google Sheets content calendars"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "content_calendar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^5.11.0"
google-auth = "^2.24.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
